# mafia-grpc

./: Makefile  README.md  setup.cfg
src/: client.py
src/mafia_host/: room.py
