[metadata]
name = socket-voice-chat
version = 0.0.1
author = Chopik
author_email = ch0p1k3@yandex.ru
description = Voice chat on tcp socket
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =.
packages = find:
install_requires =
    click
    simple-term-menu
    grpcio
    grpcio-tools

[options.packages.find]
where = .
